--- a/public/components/admin/admin.view.html
+++ b/public/components/admin/admin.view.html
@@ -1,3 +1,5 @@
+<!-- Nav -->
+
 <!-- Inicio registro de jugadores -->
 <div class="container-fluid">
     <h2>Registrar jugador</h2>
@@ -29,7 +31,7 @@
             </thead>
         </tr>
         <tr>
-            <tbody ng-repeat="user in vm.users track by $index">
+            <tbody ng-repeat="user in vm.users">
                 <td> <img src="{{user.photo}}" width="130px" height="130px"> </td>
                 <td> {{user.id}} </td>
                 <td> {{user.name}} </td>
@@ -53,7 +55,7 @@
             </thead>
         </tr>
         <tr>
-            <tbody ng-repeat="property in vm.properties track by $index">
+            <tbody ng-repeat="property in vm.properties">
                 <td>{{property.name}}</td>
                 <td>{{property.id}}</td>
                 <td>{{property.price}}</td>
@@ -71,13 +73,13 @@
         <input list="propertiesList" type="text" ng-model="vm.infoPurchase.property">
         <datalist id="propertiesList">
             <option>-- Seleccione una propiedad --</option>
-            <option ng-repeat="property in vm.properties track by $index" value="{{property.id}}"> {{property.name}} </option>
+            <option ng-repeat="property in vm.properties" value="{{property.id}}"> {{property.name}} </option>
         </datalist>
         <!-- Datalist de jugadores -->
         <input list="playersList" type="text" ng-model="vm.infoPurchase.user">
         <datalist id="playersList">
             <option>-- Seleccione un usuario --</option>
-            <option ng-repeat="user in vm.users track by $index" value="{{user.id}}"> {{user.name}} </option>
+            <option ng-repeat="user in vm.users" value="{{user.id}}"> {{user.name}} </option>
         </datalist>
 
         <button ng-click="vm.reset()" ng-disable="frmPurchaseReg.$invalid">Comprar</button>
